[tool.poetry]
name = "test-saver"
version = "0.1.0"
description = ""
authors = ["hidalgopl <pawebojanowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio-nats-client = "^0.10.0"
ujson = "^3.0.0"
rollbar = "^0.15.0"
asyncpg = "^0.20.1"
orm = "~=0.1"
databases = "^0.3.2"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
test-saver = "test_saver:main"
